
Fri 20th Oct 2023, 17:28:16
Fixed canonically spaced routine and added mail.log monitoring

Sat 21st Oct 2023, 18:02:12
Fixed to_canonically_spaced and hash table inserted

Sun 29th Oct 2023, 17:50:14
Add ssh blocking to EL_HACKER_INTERCEPT_SERVLET

Tue 31st Oct 2023, 15:28:05
Fixed void target in class ECD_STORABLE_ARRAYED_LIST and refactored ECD_RECOVERABLE_CHAIN

Mon 20th Nov 2023, 20:10:58
Optimization of EL_REFLECTED_FIELD and related classes

Tue 28th Nov 2023, 17:54:34
Made passphrase handling more secure by erasing in memory

Thu 7th Dec 2023, 17:33:50
New way to create formats using likeness strings 99.99

Tue 12th Dec 2023, 17:43:25
Optimizing EL_POINT_ARRAY and descendants

Sat 16th Dec 2023, 17:32:34
Vision2 model point_array optimizations

Thu 21st Dec 2023, 19:50:58
Reorganized structure of base.ecf

Sat 23rd Dec 2023, 15:35:11
Tried caching block_offset in EL_COMPACT_SUBSTRINGS_32

Sun 31st Dec 2023, 15:00:27
Management of application versions in path list

Tue 9th Jan 2024, 16:25:24
Cairo interface to Glib with GError handling

Sun 28th Jan 2024, 18:28:55
Change to note class link place holder notation

Mon 19th Feb 2024, 18:29:59
Refactored caching of hosted Paypal button information

Fri 23rd Feb 2024, 17:37:51
EL_TIME_DATE_I now uses EL_SYSTEM time for updates

Sat 16th Mar 2024, 12:45:20
Split ZSTRING_TEST_SET into smaller tests

Wed 3rd Apr 2024, 14:42:20
Refactor of EL_ZSTRING to use STRING_32.area

Fri 19th Apr 2024, 8:22:04
Refactoring ZSTRING and many string routines

Sun 21st Apr 2024, 8:54:53
Optimized ZSTRING.to_string_32

Fri 17th May 2024, 13:42:19
FTP adapted for Fasthosts Prosite

Sat 1st Jun 2024, 14:03:03
Eiffel publisher now replaces/update DEVELOPER_CLASS_LINK instances

Sat 1st Jun 2024, 14:04:59
Eiffel publisher DEVELOPER_CLASS_LINK now removeable and updateable

Sun 9th Jun 2024, 9:53:35
Eiffel Viewer synchronizes perfectly with better client examples

Wed 12th Jun 2024, 16:33:01
Eiffel Viewer routine distribution stats
